--- a/index.html
+++ b/index.html
@@ -358,7 +358,31 @@
                 </a></li>
             </ul>
         </div>  
+
+        <div class="subscribe-section">
+          <h3 class="subscribe-title">Підпишіться на розсилку</h3>
+          <form class="input-form">
+            <div class="subscribe-button-div">
+              <input class="subscribe-input"
+                type="email"
+                name="mail"
+                id="mail"
+                placeholder="E-mail"
+              />
+              <button class="subscribe-button">
+                Підписатися
+                <svg class="svg-send" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+
+          <!-- </div> -->
+        </div>
+
       </div>
+      
     </footer>
     <div class="modal-backdrop is-hidden" data-modal>
       <div class="modal">
@@ -367,12 +391,75 @@
             <use href="./images/icons.svg#button-close"></use>
           </svg>  
         </button>
-        <!-- <div class="close-sign" data-modal-close>
-          <svg class="svg-close" width="20" height="20">
-            <use href="./images/icons.svg#button-close"></use>
-          </svg>  
-        </div> -->
-        </div>
+        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form name="form-order" class="modal-form">
+          <div class="input-line">
+            <label for="user-name" class="modal-label">Ім'я</label>
+            <div class="input-wrapper">
+              <input
+                name="user-name"
+                type="text"
+                class="modal-input"
+                required
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#modal-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-line">
+            <label for="user-tel" class="modal-label">Телефон</label>
+            <div class="input-wrapper">
+            <input
+              name="user-tel"
+              id="user-tel"
+              type="tel"
+              class="modal-input"
+              required
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/icons.svg#modal-tel"></use>
+            </svg>
+          </div>  
+          </div>
+          <div class="input-line">
+            <label for="user-mail" class="modal-label">Пошта</label>
+            <div class="input-wrapper">
+            <input
+              name="user-mail"
+              id="user-mail"
+              type="email"
+              class="modal-input"
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/icons.svg#modal-email"></use>
+            </svg>
+          </div> 
+          </div>
+          <div class="input-line">
+          <label for="user-name" class="modal-label">Коментар</label>
+          <textarea name="user-text" id="user-text" class="modal-textarea">Введіть текст</textarea>
+          </div> 
+          <div class="input-line check-line">
+            <input
+              id="checkbox-agree"
+              value="agree"
+              name="checkbox-agree"
+              type="checkbox"
+              class="visually-hidden"
+            />
+            <label for="checkbox-agree" class="checkbox-agree">
+              <span class="icon-wrapper">
+                <svg class="agree-icon" width="13" height="9">
+                  <use href="./images/icons.svg#modal-check"></use>
+                </svg>
+              </span>
+              <span class="agree-text">Погоджуюся з розсилкою та приймаю</span> <a href="" class="agree-contract">Умови договору</a>  
+            </label>
+          </div>
+          <button type="submit" class="modal-button">Відправити</button>
+        </form>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
