--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         </div>  
 
         <div class="subscribe-section">
-          <h3 class="subscribe-title">Підпишіться на розсилку</h3>
+          <p class="subscribe-title">Підпишіться на розсилку</p>
           <form class="input-form">
             <div class="subscribe-button-div">
               <input class="subscribe-input"
@@ -391,7 +391,7 @@
             <use href="./images/icons.svg#button-close"></use>
           </svg>  
         </button>
-        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
         <form name="form-order" class="modal-form">
           <div class="input-line">
             <label for="user-name" class="modal-label">Ім'я</label>
