--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 id="mail"
                 placeholder="E-mail"
               />
-              <button class="subscribe-button">
+              <button class="subscribe-button" type="submit">
                 Підписатися
                 <svg class="svg-send" width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
